--- a/manifest.json
+++ b/manifest.json
@@ -20,8 +20,7 @@
   "content_scripts": [
     {
       "matches": [
-        "https://*.google.com/*",
-        "https://*.google.com.vn/*"
+        "<all_urls>"
       ],
       "js": [
         "content.js",
