--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,7 @@
     "alarms",
     "storage",
     "tabs",
-    "<all_urls>",
-    "nativeMessaging"
+    "<all_urls>"
   ],
   "background": {
     "service_worker": "background.js"
